--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -63,19 +63,19 @@
         <!--</dependency>-->
 
 
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.0.7.Final</version>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-entitymanager</artifactId>-->
+        <!--<version>5.0.7.Final</version>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <!-- OK -->
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.hibernate.javax.persistence</groupId>-->
+        <!--<artifactId>hibernate-jpa-2.1-api</artifactId>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>it.kamaladafrica</groupId>
@@ -107,7 +107,7 @@
             <artifactId>components</artifactId>
             <version>2.1.14</version>
         </dependency>
-        
+
         <!--<dependency>-->
         <!--<groupId>org.jboss.spec.javax.ejb</groupId>-->
         <!--<artifactId>jboss-ejb-api_3.2_spec</artifactId>-->
@@ -202,24 +202,24 @@
         </dependency>
 
         <!-- OK -->
-        <dependency>
-            <groupId>org.apache.deltaspike.modules</groupId>
-            <artifactId>deltaspike-jpa-module-api</artifactId>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.apache.deltaspike.modules</groupId>-->
+        <!--<artifactId>deltaspike-jpa-module-api</artifactId>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.190</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.h2database</groupId>-->
+        <!--<artifactId>h2</artifactId>-->
+        <!--<version>1.4.190</version>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <!-- OK -->
-        <dependency>
-            <groupId>org.apache.deltaspike.modules</groupId>
-            <artifactId>deltaspike-jpa-module-impl</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.apache.deltaspike.modules</groupId>-->
+        <!--<artifactId>deltaspike-jpa-module-impl</artifactId>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <!-- OK -->
         <dependency>
