Anpassung der POM an Wildfly Quickstart Beispiele

--- a/pom.xml
+++ b/pom.xml
@@ -154,11 +154,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.spec.javax.servlet</groupId>
-            <artifactId>jboss-servlet-api_3.1_spec</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
@@ -500,16 +495,16 @@
         </profile>
     </profiles>
 
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>bintray</name>
-            <url>http://jcenter.bintray.com</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+    <!--<repository>-->
+    <!--<snapshots>-->
+    <!--<enabled>false</enabled>-->
+    <!--</snapshots>-->
+    <!--<id>central</id>-->
+    <!--<name>bintray</name>-->
+    <!--<url>http://jcenter.bintray.com</url>-->
+    <!--</repository>-->
+    <!--</repositories>-->
 
     <modules>
         <module>anwendung</module>
