--- a/anwendung/src/main/webapp/WEB-INF/web.xml
+++ b/anwendung/src/main/webapp/WEB-INF/web.xml
@@ -5,4 +5,13 @@
          version="3.1">
 
 
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+
+    <welcome-file-list>
+        <welcome-file>faces/index.xhtml</welcome-file>
+    </welcome-file-list>
+
 </web-app>
