--- a/pom.xml
+++ b/pom.xml
@@ -22,23 +22,15 @@
         <maven.compiler.version>3.5.1</maven.compiler.version>
 
         <maven.enforcer.version>1.4.1</maven.enforcer.version>
-        <!-- Benutze die selbe Checkstype Version, wie das IntelliJ Plugin ! -->
-        <checkstyle.version>6.14.1</checkstyle.version>
-
-        <version.deltaspike>1.5.2</version.deltaspike>
-
 
         <slf4j.version>1.7.13</slf4j.version>
-        <junit.version>4.12</junit.version>
-        <oleaster.version>0.1.3-SNAPSHOT</oleaster.version>
+
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
 
-        <skipTests>false</skipTests>
-        <h2.version>1.4.190</h2.version>
-        <hibernate.version>5.0.7.Final</hibernate.version>
-        <version.jboss.bom>10.0.1.Final</version.jboss.bom>
+        <!-- Das muss woanders hin -->
         <aspectj.version>1.8.9</aspectj.version>
+        <version.jboss.bom>10.0.1.Final</version.jboss.bom>
     </properties>
 
     <scm>
@@ -91,36 +83,8 @@
 
             <dependency>
                 <groupId>com.github.haschi.haushaltsbuch</groupId>
-                <artifactId>infrastruktur</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.github.haschi.haushaltsbuch</groupId>
                 <artifactId>anwendung</artifactId>
                 <version>${project.version}</version>
-            </dependency>
-
-            <!-- auslagern nach coding.bom -->
-
-            <!-- Alles für Arquillian -->
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>1.1.9.Final</version>
-                <!-- version>1.1.10.Final</version -->
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.jboss.shrinkwrap.resolver</groupId>
-                <artifactId>shrinkwrap-resolver-bom</artifactId>
-                <version>2.2.0</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
 
             <!-- auslagern nach jee-test.bom -->
@@ -153,10 +117,6 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-        </dependency>
 
     </dependencies>
 
@@ -352,12 +312,6 @@
                         <artifactId>aspectjrt</artifactId>
                         <version>${aspectj.version}</version>
                     </dependency>
-
-                    <!--dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency-->
                 </dependencies>
 
             </plugin>
@@ -401,99 +355,15 @@
         </plugins>
     </build>
 
-    <distributionManagement>
-        <repository>
-            <id>release-deployment</id>
-            <name>Internal Releases</name>
-            <url>http://development12:8081/nexus/content/repositories/releases/</url>
-        </repository>
-
-        <snapshotRepository>
-            <id>schnappschuss-deployment</id>
-            <name>Internal Snapshots</name>
-            <url>http://development12:8081/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-
-    </distributionManagement>
-
     <reporting>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.19.1</version>
             </plugin>
-
-
         </plugins>
     </reporting>
-
-    <profiles>
-        <profile>
-            <id>arquillian-wildfly-embedded</id>
-            <properties>
-                <arquillian.version>1.1.9.Final</arquillian.version>
-
-                <wildfly.version>8.2.1.Final</wildfly.version>
-            </properties>
-            <dependencyManagement>
-
-                <dependencies>
-                </dependencies>
-            </dependencyManagement>
-            <build>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources-wildfly-embedded</directory>
-                    </testResource>
-                </testResources>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>${maven.dependency.plugin.version}</version>
-                        <executions>
-                            <!-- Entpackt Wildfly ins target-Verzeichnis -->
-                            <execution>
-                                <id>unpack</id>
-                                <phase>process-test-classes</phase>
-                                <goals>
-                                    <goal>unpack</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.wildfly</groupId>
-                                            <artifactId>wildfly-dist</artifactId>
-                                            <version>${wildfly.version}</version>
-                                            <type>zip</type>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${project.build.directory}</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!-- Tests ausführen; Kann auch mit failsafe-Plugin für Integrationstests geschehen. -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                                <jboss.home>${project.build.directory}/wildfly-${wildfly.version}</jboss.home>
-                                <module.path>${project.build.directory}/wildfly-${wildfly.version}/modules</module.path>
-                            </systemPropertyVariables>
-                            <redirectTestOutputToFile>false</redirectTestOutputToFile>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
     <!--<repositories>-->
     <!--<repository>-->
@@ -509,7 +379,6 @@
     <modules>
         <module>anwendung</module>
         <module>domaene</module>
-        <module>infrastruktur</module>
         <module>coding</module>
     </modules>
 </project>
