--- a/docker/default.conf
+++ b/docker/default.conf
@@ -5,7 +5,7 @@ server {
   #charset koi8-r;
   #access_log  /var/log/nginx/log/host.access.log  main;
 
-  location / {
+  location /web {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     expires off;
@@ -27,8 +27,20 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_redirect off;
-    proxy_pass http://haushaltsbuch:8080/haushaltsbuch/;
+    proxy_pass http://localhost:8080/haushaltsbuch/;
   }
+
+  # Weiterleitung auf die Anwendung Haushaltsbuch im verlinkten Docker Wildfly Server
+  location / {
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    proxy_redirect off;
+    proxy_pass http://localhost:3000/;
+  }
+
 
   location /wildfly/ {
     proxy_set_header Host $host;
@@ -36,12 +48,12 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
     proxy_redirect off;
-    proxy_pass http://haushaltsbuch:8080/;
+    proxy_pass http://localhost:8080/;
   }
 
   location /admin {
     rewrite ^/admin(.*) /$1 break;
     # proxy_set_header Host $host;
-    proxy_pass http://haushaltsbuch:9990;
+    proxy_pass http://localhost:9990;
   }
 }
