--- a/coding/modelldokumentation/pom.xml
+++ b/coding/modelldokumentation/pom.xml
@@ -36,9 +36,9 @@
         </dependency>
 
         <dependency>
-            <groupId>velocity</groupId>
+            <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
-            <version>1.5</version>
+            <version>1.7</version>
         </dependency>
     </dependencies>
 
