--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -172,24 +172,24 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
-                <!--<configuration>-->
-                <!--<doclet>com.github.haschi.modelldokumentation.EventStormingModellDoclet</doclet>-->
-                <!--<docletArtifact>-->
-                <!--<artifactId>modelldokumentation</artifactId>-->
-                <!--<groupId>com.github.haschi</groupId>-->
-                <!--<version>0.0.26-SNAPSHOT</version>-->
-                <!--</docletArtifact>-->
-                <!--<additionalparam></additionalparam>-->
-                <!--<useStandardDocletOptions>false</useStandardDocletOptions>-->
-                <!--<debug>true</debug>-->
-                <!--<additionalDependencies>-->
-                <!--<additionalDependency>-->
-                <!--<groupId>com.github.haschi</groupId>-->
-                <!--<artifactId>aspekte</artifactId>-->
-                <!--<version>0.0.26-SNAPSHOT</version>-->
-                <!--</additionalDependency>-->
-                <!--</additionalDependencies>-->
-                <!--</configuration>-->
+                <configuration>
+                    <doclet>com.github.haschi.modelldokumentation.EventStormingModellDoclet</doclet>
+                    <docletArtifact>
+                        <artifactId>modelldokumentation</artifactId>
+                        <groupId>com.github.haschi</groupId>
+                        <version>0.0.26-SNAPSHOT</version>
+                    </docletArtifact>
+                    <additionalparam></additionalparam>
+                    <useStandardDocletOptions>false</useStandardDocletOptions>
+                    <debug>true</debug>
+                    <additionalDependencies>
+                        <additionalDependency>
+                            <groupId>com.github.haschi</groupId>
+                            <artifactId>aspekte</artifactId>
+                            <version>0.0.26-SNAPSHOT</version>
+                        </additionalDependency>
+                    </additionalDependencies>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
