--- a/coding/modeling/pom.xml
+++ b/coding/modeling/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>parent</artifactId>
         <groupId>com.github.haschi</groupId>
         <version>0.0.26-SNAPSHOT</version>
+        <relativePath>../parent</relativePath>
     </parent>
 
     <artifactId>modeling</artifactId>
