Domäne verwendet keine Google Collections mehr, sondern Javaslang.

--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -54,6 +54,13 @@
         <dependency>
             <groupId>it.kamaladafrica</groupId>
             <artifactId>axon-cdi</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.javaslang</groupId>
+            <artifactId>javaslang</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
