--- a/web/package.json
+++ b/web/package.json
@@ -112,6 +112,7 @@
     "parse5": "^2.2.2",
     "protractor": "^4.0.10",
     "raw-loader": "0.5.1",
+    "remap-istanbul": "^0.8.0",
     "rimraf": "~2.5.4",
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
