--- a/web/pom.xml
+++ b/web/pom.xml
@@ -21,27 +21,47 @@
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>1.3</version>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
 
             <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <!--<filesets>-->
+                    <!--<fileset>-->
+                    <!--<directory>some/relative/path</directory>-->
+                    <!--<includes>-->
+                    <!--<include>**/*.tmp</include>-->
+                    <!--<include>**/*.log</include>-->
+                    <!--</includes>-->
+                    <!--<excludes>-->
+                    <!--<exclude>**/important.log</exclude>-->
+                    <!--<exclude>**/another-important.log</exclude>-->
+                    <!--</excludes>-->
+                    <!--<followSymlinks>false</followSymlinks>-->
+                    <!--</fileset>-->
+                    <!--</filesets>-->
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <executions>
-                    <execution>
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>validate</phase>
-                        <configuration>
-                            <nodeVersion>v7.2.1</nodeVersion>
-                            <npmVersion>4.0.2</npmVersion>
-                        </configuration>
-                    </execution>
+                    <!--<execution>-->
+                    <!--<id>run npm</id>-->
+                    <!--<goals>-->
+                    <!--<goal>npm</goal>-->
+                    <!--</goals>-->
+                    <!--<phase>validate</phase>-->
+                    <!--</execution>-->
                     <!--<execution>-->
                     <!--<id>webpack build</id>-->
                     <!--<goals>-->
@@ -66,6 +86,17 @@
                         </configuration>
                     </execution>
 
+
+                    <execution>
+                        <id>clean dist</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>clean</phase>
+                        <configuration>
+                            <arguments>run clean:dist</arguments>
+                        </configuration>
+                    </execution>
 
                     <execution>
                         <id>npm run build</id>
