--- a/web/pom.xml
+++ b/web/pom.xml
@@ -55,47 +55,14 @@
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <executions>
-                    <!--<execution>-->
-                    <!--<id>run npm</id>-->
-                    <!--<goals>-->
-                    <!--<goal>npm</goal>-->
-                    <!--</goals>-->
-                    <!--<phase>validate</phase>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                    <!--<id>webpack build</id>-->
-                    <!--<goals>-->
-                    <!--<goal>webpack</goal>-->
-                    <!--</goals>-->
-                    <!--<phase>compile</phase>-->
-                    <!--<configuration>-->
-                    <!--<arguments>-p</arguments>-->
-                    <!--</configuration>-->
-                    <!--</execution>-->
-
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-
-                        <phase>initialize</phase>
-
-                        <!-- Optional configuration which provides for running any npm command -->
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
 
                     <execution>
                         <id>npm install to clean</id>
                         <goals>
+                            <goal>install-node-and-npm</goal>
                             <goal>npm</goal>
                         </goals>
-
                         <phase>pre-clean</phase>
-
-                        <!-- Optional configuration which provides for running any npm command -->
                         <configuration>
                             <arguments>install</arguments>
                         </configuration>
@@ -110,6 +77,15 @@
                         <configuration>
                             <arguments>run clean:dist</arguments>
                         </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm install to compile</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>initialize</phase>
                     </execution>
 
                     <execution>
