--- a/web/pom.xml
+++ b/web/pom.xml
@@ -95,7 +95,7 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
-                            <arguments>run build</arguments>
+                            <arguments>run build:prod</arguments>
                         </configuration>
                     </execution>
 
