--- a/web/package.json
+++ b/web/package.json
@@ -75,6 +75,7 @@
     "@angularclass/hmr-loader": "~3.0.2",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "materialize-css": "^0.97.8",
