--- a/web/package.json
+++ b/web/package.json
@@ -79,6 +79,8 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "materialize-css": "^0.97.8",
+    "ng2-redux": "^5.1.0",
+    "redux": "^3.6.0",
     "roboto-fontface": "^0.6.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.26"
