--- a/web/pom.xml
+++ b/web/pom.xml
@@ -99,6 +99,16 @@
                         </configuration>
                     </execution>
 
+                    <execution>
+                        <id>npm run test</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>test</phase>
+                        <configuration>
+                            <arguments>run test -- --browsers PhantomJS</arguments>
+                        </configuration>
+                    </execution>
                 </executions>
                 <configuration>
                     <nodeVersion>v7.2.1</nodeVersion>
