Ausgabe des Build erfolgt im target Verzeichnis

--- a/web/package.json
+++ b/web/package.json
@@ -16,10 +16,10 @@
     "build:prod": "webpack --config config/webpack.prod.js  --profile",
     "build": "npm run build:dev",
     "ci": "npm run lint && npm test && npm run e2e",
-    "clean:dist": "npm run rimraf -- dist",
+    "clean:dist": "npm run rimraf -- target",
     "clean:install": "npm set progress=false && npm install",
     "clean:start": "npm start",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage target",
     "docker": "docker",
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
@@ -39,8 +39,8 @@
     "rimraf": "rimraf",
     "server:dev:hmr": "npm run server:dev -- --inline --hot",
     "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:prod": "http-server dist --cors",
-    "server:prod:ci": "http-server dist -p 3000 --cors",
+    "server:prod": "http-server target/dist --cors",
+    "server:prod:ci": "http-server target/dist -p 8000 --cors",
     "server": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
