SideNav einblenden, beim Klick auf Menü-Schaltfläche

--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,10 @@
   ],
   "author": "Matthias Haschka",
   "homepage": "https://github.com/angularclass/angular2-webpack-starter",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
+    "build:docker": "npm run build:prod && docker build -t frontend:latest .",
     "build:prod": "webpack --config config/webpack.prod.js  --profile",
     "build": "npm run build:dev",
     "ci": "npm run lint && npm test && npm run e2e",
@@ -74,6 +74,7 @@
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.2",
     "@angularclass/hmr-loader": "~3.0.2",
+    "angular2-materialize": "^6.3.0",
     "assets-webpack-plugin": "^3.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
