--- a/web/package.json
+++ b/web/package.json
@@ -16,10 +16,10 @@
     "build:prod": "webpack --config config/webpack.prod.js  --profile",
     "build": "npm run build:dev",
     "ci": "npm run lint && npm test && npm run e2e",
-    "clean:dist": "npm run rimraf -- target",
+    "clean:dist": "npm run rimraf -- target/dist",
     "clean:install": "npm set progress=false && npm install",
     "clean:start": "npm start",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage target",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage target/dist",
     "docker": "docker",
     "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
     "e2e:live": "npm run e2e -- --elementExplorer",
