--- a/anwendung/docker/Dockerfile
+++ b/anwendung/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM jboss/wildfly
-ADD anwendung-0.0.1-SNAPSHOT.war /opt/jboss/wildfly/standalone/deployments/
+ADD ${project.build.finalName}.${project.packaging} /opt/jboss/wildfly/standalone/deployments/
 RUN /opt/jboss/wildfly/bin/add-user.sh admin admin --silent
 
 EXPOSE 9990
