--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,3 @@
-FROM nginx
-COPY mysite /usr/share/nginx/html
-COPY default.conf /etc/nginx/conf.d/default.conf
+FROM haushaltsbuch/web:latest
+# COPY mysite /usr/share/nginx/html
+# COPY default.conf /etc/nginx/conf.d/default.conf
