--- a/web/package.json
+++ b/web/package.json
@@ -121,7 +121,7 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-summary-reporter": "^1.3.3",
-    "karma-webpack": "1.8.1",
+    "karma-webpack": "2.0.2",
     "null-loader": "^0.1.1",
     "parse5": "^2.2.2",
     "protractor": "^4.0.10",
@@ -141,9 +141,9 @@
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
     "v8-lazy-parse-webpack-plugin": "^0.3.0",
-    "webpack": "2.2.0-rc.0",
+    "webpack": "2.2.0",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-dev-server": "2.2.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "~1.0.1"
   },
