--- a/web/package.json
+++ b/web/package.json
@@ -62,6 +62,7 @@
     "fake": "json-server --config 'fake/json-server.json' fake/db.json"
   },
   "dependencies": {
+    "@angular-redux/store": "^6.0.0",
     "@angular/common": "2.4.2",
     "@angular/compiler": "2.4.2",
     "@angular/core": "2.4.2",
@@ -81,15 +82,14 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "materialize-css": "^0.97.8",
-    "ng2-redux": "^5.1.0",
     "redux": "^3.6.0",
     "roboto-fontface": "^0.6.0",
     "rxjs": "5.0.3",
-    "zone.js": "0.7.4"
+    "zone.js": "0.7.6"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.33",
-    "@types/jasmine": "^2.2.34",
+    "@types/jasmine": "2.5.41",
     "@types/node": "^6.0.38",
     "@types/selenium-webdriver": "2.53.33",
     "@types/source-map": "^0.1.27",
@@ -97,7 +97,7 @@
     "@types/webpack": "^1.12.34",
     "angular-router-loader": "^0.4.0",
     "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^2.2.1",
+    "awesome-typescript-loader": "3.0.0-beta.10",
     "codelyzer": "~2.0.0-beta.4",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.26.0",
@@ -111,17 +111,17 @@
     "istanbul-instrumenter-loader": "0.2.0",
     "json-loader": "^0.5.4",
     "json-server": "^0.9.4",
-    "karma": "^1.2.0",
+    "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-junit-reporter": "^1.2.0",
-    "karma-mocha-reporter": "^2.0.0",
+    "karma-mocha-reporter": "^2.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-coverage": "^0.1.1",
+    "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-summary-reporter": "^1.3.3",
-    "karma-webpack": "2.0.2",
+    "karma-webpack": "^2.0.2",
     "null-loader": "^0.1.1",
     "parse5": "^2.2.2",
     "protractor": "^4.0.10",
