:de: Upgrate tslint und tslint loader, Anpassung der tslint und typescript Einstellungen

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -10,6 +10,7 @@
     "noEmitHelpers": true,
     "strictNullChecks": false,
     "baseUrl": "./src",
+    "noUnusedParameters": true,
     "paths": {
     },
     "lib": [
