:de: Upgrate tslint und tslint loader, Anpassung der tslint und typescript Einstellungen

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -11,6 +11,8 @@
     "strictNullChecks": false,
     "baseUrl": "./src",
     "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "allowUnreachableCode": false,
     "paths": {
     },
     "lib": [
